# diff_logger

./: Cargo.toml  README.md
.github/: build.yaml
.github/workflows/: build.yaml
examples/: simple.rs
src/: diff.rs  lib.rs  pretty.rs  types.rs
